Alteração de rótulo.

--- a/Aula01.html
+++ b/Aula01.html
@@ -17,7 +17,7 @@
         <p>teste 02 também a tag p</p>-->
     <form>
         <p>
-            <label>Nome:</label>
+            <label>Nome completo:</label>
             <input type="text" id="nome">
         </p>
         <p>
