--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="text" id="nome">
         </p>
         <p>
-            <label>UF:</label>
+            <label>Estado:</label>
             <input type="text" id="uf">
         </p>
         <p>
